<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <com.lingganhezi.myapp.ui.Topbar
        style="@style/Topbar"
        app:title="@string/forgotpassword_topbar_titile" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/login_registe_padding"
        android:paddingRight="@dimen/login_registe_padding" >

        <EditText
            android:id="@+id/editText_email"
            style="@style/LoginEditor"
            android:hint="@string/forgotpassword_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_send"
            style="@style/LoginButton"
            android:layout_marginTop="50dp"
            android:text="@string/forgotpassword_send" />
 
    </LinearLayout>

</LinearLayout>